Cleanup and bug fixes
Former-commit-id: a154df04063c66cec00702479f1da9c54023968c